tests/ui/compile_fail/unknown_key.stderr
error: Unknown plugin configuration option: not_a_real_option
       Supported options: depends_on, meta, init_resource, insert_resource, add_message, add_plugins, init_state, add_sub_state, register_type, add_systems_startup, add_systems_update, add_systems_fixed_update, add_systems_on_enter, add_systems_on_exit, custom_build, custom_finish, generate_tests
 --> tests/ui/compile_fail/unknown_key.rs:3:1
  |
3 | / define_plugin!(UnknownKeyPlugin {
4 | |     not_a_real_option: [u32]
5 | | });
  | |__^
  |
  = note: this error originates in the macro `$crate::define_plugin_internal` which comes from the expansion of the macro `define_plugin` (in Nightly builds, run with -Z macro-backtrace for more info)
